# veilcore

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  dashboard_server.py  pyproject.toml.bak  requirements.txt  test-phase3.py  test-physical.py  veil_gui.py  veilc.py
veilcore/veil/: __init__.py  api.py  api.py.bak2  api_engines.py  api_physical.py  msosctl2.py  organ_runner.py  pyproject.toml  resolver.py
veilcore/veil/api/: __main__.py
veilcore/veil/core/: __init__.py
veilcore/veil/glyphs/: init.py
veilcore/veil/loader/: loader.py
veilcore/veil/msos/: __main__.py
veilcore/veil/msos2/: __init__.py  supervisor.py
veilcore/veil/orchestrator/: boot.py
veilcore/veil/registry/: registry.py
veilcore/veil/security/: core.py
veilcore/veil/specs/: audit_log.yaml  cockpit_backend.yaml  mfa.yaml  zombie_sweeper.yaml
veilcore/veil/telemetry/: core.py
veilcore/veil/templates/: home.html  patient_new.html
veilcore/veil_os/: ANALYSIS_REPORT.md  eof  ledger.json  pyproject.toml  velic.py
veilcore/veil_os/backend/: VeilHospital.spec  chronicle.yaml  sitecustomize.py
veilcore/veil_os/data/: organs.json
veilcore/veil_os/manual/: commands.index
veilcore/veil_os/organ_specs/: bridge.yaml  codec.yaml  compile_p0.sh  daemonizer.yaml  driver.yaml  engine.yaml  epic.yaml  flux.yaml  forensic.yaml  gateway.yaml  hatchery.yaml  hl7.yaml  insider_threat.yaml  journal.yaml  keystore.yaml  linker.yaml  loader.yaml  logger.yaml  mfa.yaml  patcher.yaml  phi.yaml  queue.yaml  relay.yaml  signal.yaml  socket.yaml  switch.yaml  synth.yaml  telemetry.yaml  vault.yaml  zombie_sweeper.yaml
veilcore/veil_os/organs/: __init__.py  analytics.py  auto_lockdown.py  guardian.py  host_sensor.py  master.py  telemetry.py  weaver.py  zero_trust.py  zombie_sweeper.py
veilcore/veil_os/scripts/: activate_all.sh  immutable_sweep.sh  organ_health.sh
veilcore/veil_os/security/: RISK_ANALYSIS.md  SYSTEM_OVERVIEW.md
veilcore/veil_os/tests/: test_registry.py  test_security_organs.py  test_smoke.py  test_telemetry_collector.py  test_telemetry_cpu_thresholds.py  test_telemetry_disk_metrics.py  test_telemetry_event_metrics.py  test_telemetry_memory_thresholds.py  test_telemetry_timing.py  (+3 more)
(+1075 files in other folders)
