[project]
name = "veil-os"
version = "1.0.0"
description = "The Veil OS Cybersecurity Organism"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "jinja2>=3.1.3",
    "pyyaml>=6.0.1",
    "cryptography>=42.0.5",
    "rich>=13.7.0",
    "watchfiles>=0.21.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.2",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.25",
    "aiofiles>=23.2.1",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["veil"]
